bk_ida/gccida/c3/scope_to_insns_finalize
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:765:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:765:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:774:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:774:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:820:1: error: use of undeclared identifier 'v9'
v9 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:823:1: error: use of undeclared identifier 'v9'
v9 = emit_note_before( -98, v9); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:823:29: error: use of undeclared identifier 'v9'
v9 = emit_note_before( -98, v9); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:824:14: error: use of undeclared identifier 'v9'
*( _QWORD *)&v9[2] = i; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:879:1: error: use of undeclared identifier 'v18'
v18 = v11; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:882:30: error: use of undeclared identifier 'v18'
v18 = emit_note_before( -98, v18); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:882:1: error: use of undeclared identifier 'v18'
v18 = emit_note_before( -98, v18); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/cfglayout.c:883:14: error: use of undeclared identifier 'v18'
*( _QWORD *)&v18[2] = v13; 
             ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scope_to_insns_finalize/src/obj/cfglayout.o] Error 1
